--- a/Research.html
+++ b/Research.html
@@ -217,7 +217,7 @@ style="font-weight: bold;">link</a>
 
 <p> 7) Identifiability and Reconstructibility of Species Phylogenies under a Modified Coalescent (with Laura Kubatko). <em>Bull. Math. Biol. </em>
 <strong>81</strong> (2019), no. 2, 408–430
-<a href="https://pubmed.ncbi.nlm.nih.gov/29926380/" style="font-weight: bold;">link</a>
+<a href="https://link.springer.com/article/10.1007/s11538-018-0456-9" style="font-weight: bold;">link</a>
 <!---<a href="https://arxiv.org/abs/1701.06871" style="font-weight: bold;">1701.06871</a>--->
 </p>
 
@@ -242,7 +242,7 @@ style="font-weight: bold;">link</a>
   </p>
 
 <p> 4) L-Infinity Optimization to Linear Spaces and Phylogenetic trees (with Daniel Bernstein).
-<em>SIAM J. on Discrete Math. </em>
+<em>SIAM J. Discrete Math. </em>
 <strong>31</strong> (2017), no. 2, 875-889
 <!---a href="https://arxiv.org/abs/1702.05127" style="font-weight: bold;">1702.05127</a>--->
          <a href="https://epubs.siam.org/doi/abs/10.1137/16M1101027?journalCode=sjdmec" style="font-weight: bold;">link</a>
@@ -252,13 +252,13 @@ style="font-weight: bold;">link</a>
 
   <p>
   3) Bounds on the Expected Size of the Maximum Agreement Subtree (with Daniel Irving Bernstein, Lam Si Tung Ho, Mike Steel, Katherine St. John, Seth Sullivant).
-<em>SIAM J. on Discrete Math. </em><strong>29</strong> (2015), no. 4, 2065-2074
+<em>SIAM J. Discrete Math. </em><strong>29</strong> (2015), no. 4, 2065-2074
   <!---<a href="http://front.math.ucdavis.edu/1411.7338" style="font-weight: bold;">1411.7338</a>--->
   <a href="https://epubs.siam.org/doi/abs/10.1137/140997750?mobileUi=0" style="font-weight: bold;">link</a>
   </p>
 
   <p>
-  2) Tying up Loose Strands: the defining equations of the strand symmetric model (with Seth Sullivant). <em>Journal of Algebraic Statistics.</em> <strong>6</strong> (1), (2015), no. 1, 17-23.
+  2) Tying up Loose Strands: the defining equations of the strand symmetric model (with Seth Sullivant). <em>J. Algeb. Stats.</em> <strong>6</strong> (1), (2015), no. 1, 17-23.
   <!---<a href="http://arxiv.org/abs/1410.3344" style="font-weight: bold;">1410.3344</a>  &nbsp;--->
   <a href="http://arxiv.org/abs/1410.3344" style="font-weight: bold;">link</a>  &nbsp;
   <a href="  http://www4.ncsu.edu/~smsulli2/Pubs/LooseStrandsWebsite/SSM_Supplement.html" style="font-weight: bold;">Supplementary Materials</a>
