--- a/Research.html
+++ b/Research.html
@@ -127,6 +127,9 @@
 
 <p><strong>Submitted Papers and Preprints:</strong>
 
+<p> 17) Phylogenomic Models from Tree Symmetries
+         (with Elizabeth S. Allman and John A. Rhodes).</p>
+
   <p> 16) Statistical Learning with Phylogenetic Network Invariants
          (with Travis Barton, Elizabeth Gross, and Joseph Rusinko).</p>
 
