Updated CV, homepage description

--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@ In my research, I use tools from algebraic geometry, algebraic statistics,
 and discrete mathematics to address questions in phylogenetics.
 Currently, I am an Assistant Professor of Mathematics at The College of Wooster.
 Before coming to Wooster, I was a postdoctoral research fellow at the
-Mathematical Biosciences Institute at The Ohio State University and
-a data scientist consulting at Nationwide Insurance.
+Mathematical Biosciences Institute at The Ohio State University.
+%and
+%a data scientist consulting at Nationwide Insurance.
 
   </div>
 
