Updated Associate Professor

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
   <div id="info">
     <p>&nbsp;</p>
     <h2>Colby Long</h2>
-<p>Ph.D., Mathematics<br />
-    North Carolina State University      <br />
+<p>Associate Professor of Mathematics and Statistical & Data Sciences<br />
+    The College of Wooster      <br />
   <strong>Email:</strong> clong at wooster dot edu    <br/>
     <br />
 
@@ -112,8 +112,8 @@
 
 In my research, I use tools from algebraic geometry, algebraic statistics,
 and discrete mathematics to address questions in phylogenetics.
-Currently, I am an Assistant Professor of Mathematics at The College of Wooster.
-Before coming to Wooster, I was a postdoctoral research fellow at the
+Before starting at the College of Wooster, I received my PhD in
+Mathematics from North Carolina State University and was a postdoctoral research fellow at the
 Mathematical Biosciences Institute at The Ohio State University.
 
 
