--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 In my research, I use tools from algebraic geometry, algebraic statistics,
 and discrete mathematics to address questions in phylogenetics.
-Before starting at the College of Wooster, I received my PhD in
+Before starting at The College of Wooster, I received my PhD in
 Mathematics from North Carolina State University and was a postdoctoral research fellow at the
 Mathematical Biosciences Institute at The Ohio State University.
 
